[package]
name = "p2pool-client-block-template"
authors = ["Hisaishi Joe <hisaishi@tuta.io>"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec.workspace = true
jsonrpsee = { workspace = true, features = ["http-client"] }
log.workspace = true
thiserror.workspace = true
tokio.workspace = true

sc-client-api.workspace = true
sp-blockchain.workspace = true

hashcash-client-consensus-rpc.workspace = true
hashcash-primitives-core = { workspace = true, features = ["std"] }
