[package]
name = "p2pool-client-block-template"
version = "0.0.0"
publish = false
authors = ["Hisaishi Joe <hisaishi@tuta.io>"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec.workspace = true
jsonrpsee = { workspace = true, features = ["http-client"] }
log.workspace = true
thiserror.workspace = true
tokio.workspace = true

sc-client-api.workspace = true
sp-blockchain.workspace = true
sp-consensus.workspace = true
sp-runtime.workspace = true

hashcash-primitives = { workspace = true, features = ["std"] }
hashcash-primitives-core = { workspace = true, features = ["std"] }

p2pool-client-consensus.workspace = true
