[package]
name = "p2pool-client-cli"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap.workspace = true
log.workspace = true
names.workspace = true
regex.workspace = true

sc-cli.workspace = true
sc-network.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sp-keyring.workspace = true