[package]
name = "p2pool-client-consensus"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
log.workspace = true
parity-scale-codec = { workspace = true, features = ["std"] }
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true

sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-pow.workspace = true
sc-utils.workspace = true
sp-api = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-consensus.workspace = true
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

hashcash-client-api.workspace = true
hashcash-client-randomx.workspace = true
hashcash-client-utils = { workspace = true, features = ["rpc"] }
hashcash-primitives-core = { workspace = true, features = ["std"] }
