[package]
name = "p2pool-client-miner"
version = "0.0.0"
publish = false
authors = ["Hisaishi Joe <hisaishi@tuta.io>"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec.workspace = true
jsonrpsee = { workspace = true, features = ["http-client"] }
log.workspace = true
thiserror.workspace = true
tokio.workspace = true

sc-client-api.workspace = true
sc-utils.workspace = true
sp-blockchain.workspace = true
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-runtime.workspace = true

hashcash-client-api.workspace = true
hashcash-client-consensus.workspace = true
hashcash-primitives-core = { workspace = true, features = ["std"] }

p2pool-client-consensus.workspace = true
