[package]
name = "sc-basic-authorship"
version = "0.34.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[lib]
doctest = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures.workspace = true
futures-timer.workspace = true
log = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["std"] }
substrate-prometheus-endpoint.workspace = true
sc-block-builder.workspace = true
sc-proposer-metrics.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool-api.workspace = true
sp-api = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-consensus.workspace = true
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

#[dev-dependencies]
#parking_lot.workspace = true
#sc-client-api.workspace = true
#sc-transaction-pool.workspace = true
#substrate-test-runtime-client.workspace = true
