[package]
name = "hashcash-client-consensus-rpc"
version = "0.0.0"
publish = false
authors = ["Hisaishi Joe <hisaishi@tuta.io>"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures.workspace = true
jsonrpsee = { workspace = true, features = ["client-core", "macros", "server"] }
parking_lot.workspace = true
parity-scale-codec = { workspace = true, features = ["std", "derive"] }
serde.workspace = true
thiserror.workspace = true

sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-pow.workspace = true
sp-api = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-consensus.workspace = true
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

hashcash-client-consensus.workspace = true
hashcash-primitives-core = { workspace = true, features = ["std"] }
