[package]
name = "sc-consensus-pow"
version = "0.33.0"
publish = false
authors = ["Parity Technologies <admin@parity.io>"]
description = "PoW consensus algorithm for substrate"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait.workspace = true
parity-scale-codec = { workspace = true, features = ["std", "derive"] }
futures.workspace = true
futures-timer.workspace = true
log = { workspace = true, features = ["std"] }
parking_lot.workspace = true
thiserror.workspace = true
substrate-prometheus-endpoint.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-consensus.workspace = true
sp-consensus-pow = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
